--- a/styles.css
+++ b/styles.css
@@ -79,3 +79,18 @@ section{
   background-size: cover;
 }
 
+#counter {
+  position: absolute;
+  width: 100px;
+  height: 50px;
+  background-color: dimgray;
+  border-radius: 10%;
+  top : 5px;
+  left: 5px;
+  text-align: center;
+  font-size: 35px;
+  line-height: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+}
+
