--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 body{
   background-color: #12A829;
 }
-
-section{
+#container {
   position: relative;
   top:5vh;
   width: 1000px;
@@ -82,6 +81,12 @@ section{
   background-image: url("./Images/heart.png");
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+#portada{
+  width: 100vw;
+  height: 100vh;
+  background-color: #12A829;
 }
 
 #counter {
