--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,30 @@ body{
   background-color: #12A829;
 }
 
+#portada > div {
+  position: absolute;
+  width: 70%;
+  height: 80%;
+  margin: auto;
+  left: 240px;
+  top: -90px;
+  right: 0;
+  bottom: 0;
+  font-size: 6em;
+  font-family: 'Shadows Into Light';
+}
+
+#portada > img {
+  position: absolute;
+  width: 40%;
+  height: 60%;
+  margin: auto;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+}
+
 #counter {
   position: absolute;
   width: 100px;
@@ -104,3 +128,18 @@ body{
   color: white;
 }
 
+#btn-play{
+  position: absolute;
+  border-radius: 10%;
+  background-color: crimson;
+  color: white;
+  width: 125px;
+  height: 50px;
+  top: 600px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: xx-large;
+}
